Revert "Remove the 'Release DEBG' configuration...
...and do a small cleanup to the .vcproj files"

--- a/projectfiles/VC9/liblua.vcproj
+++ b/projectfiles/VC9/liblua.vcproj
@@ -206,6 +206,69 @@
 			/>
 		</Configuration>
 		<Configuration
+			Name="Release WITH DBG|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="4"
+			CharacterSet="1"
+			WholeProgramOptimization="1"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="2"
+				EnableIntrinsicFunctions="true"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS"
+				RuntimeLibrary="2"
+				EnableFunctionLevelLinking="true"
+				OpenMP="true"
+				UsePrecompiledHeader="0"
+				WarningLevel="0"
+				DebugInformationFormat="3"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLibrarianTool"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
+		<Configuration
 			Name="ReleaseDEBUG|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
@@ -308,6 +371,15 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="ReleaseDEBUG|Win32"
 					>
 					<Tool
@@ -340,6 +412,15 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -388,6 +469,15 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="ReleaseDEBUG|Win32"
 					>
 					<Tool
@@ -420,6 +510,15 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -468,6 +567,15 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="ReleaseDEBUG|Win32"
 					>
 					<Tool
@@ -500,6 +608,15 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -548,6 +665,15 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="ReleaseDEBUG|Win32"
 					>
 					<Tool
@@ -580,6 +706,15 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -628,6 +763,15 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="ReleaseDEBUG|Win32"
 					>
 					<Tool
@@ -660,6 +804,15 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -708,6 +861,15 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="ReleaseDEBUG|Win32"
 					>
 					<Tool
@@ -740,6 +902,15 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -788,6 +959,15 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="ReleaseDEBUG|Win32"
 					>
 					<Tool
@@ -820,6 +1000,15 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -868,6 +1057,15 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="ReleaseDEBUG|Win32"
 					>
 					<Tool
@@ -900,6 +1098,15 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -948,6 +1155,15 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="ReleaseDEBUG|Win32"
 					>
 					<Tool
@@ -980,6 +1196,15 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -1028,6 +1253,15 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="ReleaseDEBUG|Win32"
 					>
 					<Tool
@@ -1060,6 +1294,15 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -1108,6 +1351,15 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="ReleaseDEBUG|Win32"
 					>
 					<Tool
@@ -1140,6 +1392,15 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -1188,6 +1449,15 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="ReleaseDEBUG|Win32"
 					>
 					<Tool
@@ -1220,6 +1490,15 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -1268,6 +1547,15 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="ReleaseDEBUG|Win32"
 					>
 					<Tool
@@ -1300,6 +1588,15 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -1348,6 +1645,15 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="ReleaseDEBUG|Win32"
 					>
 					<Tool
@@ -1380,6 +1686,15 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -1428,6 +1743,15 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="ReleaseDEBUG|Win32"
 					>
 					<Tool
@@ -1460,6 +1784,15 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -1508,6 +1841,15 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="ReleaseDEBUG|Win32"
 					>
 					<Tool
@@ -1540,6 +1882,15 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -1588,6 +1939,15 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="ReleaseDEBUG|Win32"
 					>
 					<Tool
@@ -1620,6 +1980,15 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Lua\"
+						CompileAs="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
