--- a/projectfiles/VC9/wesnothd.vcproj
+++ b/projectfiles/VC9/wesnothd.vcproj
@@ -299,7 +299,7 @@
 				AdditionalDependencies="libintl.lib SDL.lib SDL_net.lib winmm.lib ws2_32.lib SDLmain.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories=""
-				GenerateDebugInformation="false"
+				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
