Update the MSVC9 project

--- a/projectfiles/VC9/wesnoth.vcproj
+++ b/projectfiles/VC9/wesnoth.vcproj
@@ -9125,6 +9125,18 @@
 						>
 					</File>
 				</Filter>
+				<Filter
+					Name="Editor"
+					>
+					<File
+						RelativePath="..\..\src\gui\dialogs\editor\editor_edit_label.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\src\gui\dialogs\editor\editor_edit_label.hpp"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="Auxiliary"
