--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -476,6 +476,8 @@
 		<Unit filename="..\..\src\gui\dialogs\dialog.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\edit_label.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\edit_label.hpp" />
+		<Unit filename="..\..\src\gui\dialogs\editor\editor_edit_label.cpp" />
+		<Unit filename="..\..\src\gui\dialogs\editor\editor_edit_label.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\editor_generate_map.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\editor_generate_map.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\editor_new_map.cpp" />
