cb project update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -214,12 +214,16 @@
 		<Unit filename="..\..\src\editor\action\action_label.hpp" />
 		<Unit filename="..\..\src\editor\action\action_unit.cpp" />
 		<Unit filename="..\..\src\editor\action\action_unit.hpp" />
+		<Unit filename="..\..\src\editor\action\action_village.cpp" />
+		<Unit filename="..\..\src\editor\action\action_village.hpp" />
 		<Unit filename="..\..\src\editor\action\mouse\mouse_action.cpp" />
 		<Unit filename="..\..\src\editor\action\mouse\mouse_action.hpp" />
 		<Unit filename="..\..\src\editor\action\mouse\mouse_action_map_label.cpp" />
 		<Unit filename="..\..\src\editor\action\mouse\mouse_action_map_label.hpp" />
 		<Unit filename="..\..\src\editor\action\mouse\mouse_action_unit.cpp" />
 		<Unit filename="..\..\src\editor\action\mouse\mouse_action_unit.hpp" />
+		<Unit filename="..\..\src\editor\action\mouse\mouse_action_village.cpp" />
+		<Unit filename="..\..\src\editor\action\mouse\mouse_action_village.hpp" />
 		<Unit filename="..\..\src\editor\editor_common.hpp" />
 		<Unit filename="..\..\src\editor\editor_controller.cpp" />
 		<Unit filename="..\..\src\editor\editor_controller.hpp" />
