Split actions.cpp into six pieces (into a new "actions" subdirectory).
Most of the project files have also been updated, but I ran into some
difficulties trying to update VC9 and Xcode.

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -80,8 +80,18 @@
 		</Unit>
 		<Unit filename="..\..\src\about.cpp" />
 		<Unit filename="..\..\src\about.hpp" />
-		<Unit filename="..\..\src\actions.cpp" />
-		<Unit filename="..\..\src\actions.hpp" />
+		<Unit filename="..\..\src\actions\attack.cpp" />
+		<Unit filename="..\..\src\actions\attack.hpp" />
+		<Unit filename="..\..\src\actions\create.cpp" />
+		<Unit filename="..\..\src\actions\create.hpp" />
+		<Unit filename="..\..\src\actions\heal.cpp" />
+		<Unit filename="..\..\src\actions\heal.hpp" />
+		<Unit filename="..\..\src\actions\move.cpp" />
+		<Unit filename="..\..\src\actions\move.hpp" />
+		<Unit filename="..\..\src\actions\undo.cpp" />
+		<Unit filename="..\..\src\actions\undo.hpp" />
+		<Unit filename="..\..\src\actions\vision.cpp" />
+		<Unit filename="..\..\src\actions\vision.hpp" />
 		<Unit filename="..\..\src\addon\client.cpp" />
 		<Unit filename="..\..\src\addon\client.hpp" />
 		<Unit filename="..\..\src\addon\info.cpp" />
