cb project update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -657,6 +657,7 @@
 		<Unit filename="..\..\src\hash.hpp" />
 		<Unit filename="..\..\src\help.cpp" />
 		<Unit filename="..\..\src\help.hpp" />
+		<Unit filename="..\..\src\hotkey_preferences_display.cpp" />
 		<Unit filename="..\..\src\hotkeys.cpp" />
 		<Unit filename="..\..\src\hotkeys.hpp" />
 		<Unit filename="..\..\src\image.cpp" />
