vc project update

--- a/projectfiles/VC9/wesnoth.vcproj
+++ b/projectfiles/VC9/wesnoth.vcproj
@@ -17442,6 +17442,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\src\hotkey_preferences_display.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\src\hotkeys.cpp"
 			>
 		</File>
